tests/integration/tests/basic_functionality/check_commands/CHECK-NOT/one_string/01-negative_match/sample.itest
; RUN: cat %S/filecheck.input | (%FILECHECK_EXEC %S/filecheck.check 2>&1; test $? == 1;) | %FILECHECK_TESTER_EXEC %s
; CHECK: {{^.*}}FileCheck
; CHECK-NEXT: {{^.*}}filecheck.check:1:14: error: CHECK-NOT: excluded string found in input{{$}}
; CHECK-NEXT: {{^}}; CHECK-NOT: hello{{$}}
; CHECK-NEXT: {{^}}             ^{{$}}
; CHECK-NEXT: {{^<stdin>:.*:.*: note: found here$}}
; CHECK-NEXT: {{^}}hello{{$}}
; CHECK-NEXT: {{^}}^~~~~{{$}}
; CHECK-EMPTY:
